Use Java 11-compatible Stream API
`Stream::toList` was introduced in Java 16